GP-5545_5600: ProgramLoader and more flexible loader args